--- a/popup/popup.css
+++ b/popup/popup.css
@@ -28,3 +28,17 @@ input[type="radio"] {
   margin-right: 5px;
 }
 
+#settings {
+  color: black;
+  margin: 0.3em 0 0 0.6em;
+  display: block;
+  /* text-align: center; */
+}
+
+#settings:link {
+  text-decoration: none;
+}
+
+#settings:hover {
+  text-decoration: underline;
+}
